Fix Tweets/Tweet Media not showing up / Some CSS

--- a/src/style.css
+++ b/src/style.css
@@ -15,3 +15,10 @@
 .dropLabel * {
   pointer-events: none;
 }
+
+html,
+body,
+#app {
+  @apply min-h-full;
+  @apply h-full;
+}
